deploy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: gateway_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: gateway_cluster, timeout: 10s }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: gateway_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: gateway_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: gateway.smartresponsor.svc.cluster.local, port_value: 8080 }
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9900 }
